[package]
name = "ports-scanner"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
description = "Simple port scanner application and port information library"
repository = "https://github.com/rjzak/port-scanner"
categories = ["network-programming"]
keywords = ["networking"]
exclude = [".github"]

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
clap = { version = "4.5", features = ["derive", "help", "std", "usage"], default-features = false }
crossbeam-channel = "0.5"
csv = "1.3.1"
ipnet = { version = "2.10" }
lazy_static = "^1.5"
num_cpus = { version = "1.16", default-features = false }
serde = { version = "1.0", features = ["derive", "std"], default-features = false }
